--- a/package.json
+++ b/package.json
@@ -6,27 +6,35 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:css": "tailwindcss -i ./styles/tailwind.css -o ./web/tailwind.css --minify",
+    "watch:css": "tailwindcss -i ./styles/tailwind.css -o ./web/tailwind.css --watch"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@react-navigation/drawer": "^7.7.5",
     "@react-navigation/native": "^7.1.8",
     "expo": "~54.0.25",
     "expo-constants": "~18.0.10",
+    "expo-crypto": "~15.0.7",
     "expo-font": "~14.0.9",
     "expo-linking": "~8.0.9",
     "expo-router": "~6.0.15",
+    "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
     "expo-web-browser": "~15.0.9",
+    "nativewind": "^2.0.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-worklets": "0.5.1",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "~0.21.0"
+    "react-native-web": "~0.21.0",
+    "react-native-worklets": "0.5.1",
+    "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
