--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-EXPO_PUBLIC_API_URL=http://localhost:4000/api/v1    #https://voter-manage-backend.vercel.app/api/v1
+EXPO_PUBLIC_API_URL=https://voter-manage-backend.vercel.app/api/v1 #http://localhost:4000/api/v1    #https://voter-manage-backend.vercel.app/api/v1
