--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "build:css": "tailwindcss -i ./styles/tailwind.css -o ./web/tailwind.css --minify",
     "watch:css": "tailwindcss -i ./styles/tailwind.css -o ./web/tailwind.css --watch"
@@ -37,6 +37,7 @@
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
+    "@expo/metro-config": "^54.0.9",
     "@types/react": "~19.1.0",
     "react-test-renderer": "19.1.0",
     "typescript": "~5.9.2"
