--- a/app.json
+++ b/app.json
@@ -8,6 +8,7 @@
     "scheme": "voterdatamanage",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    "jsEngine": "hermes",
     "splash": {
       "image": "./assets/images/splash-icon.png",
       "resizeMode": "contain",
